# agentminmax

./: .gitignore  README.md  agentminmax.toml.example  experiments.py  pyproject.toml
.github/workflows/: perf.yml
agentminmax/: __init__.py  __main__.py  aggregation.py  benchmarks.py  cli.py  codex_logs.py  complexity.py  config.py  dashboard.py  demo.py  ingest.py  metrics.py  models.py  payloads.py  runs.py  server.py  sources.py  traces.py  utils.py
agentminmax/assets/dashboard/pages/: index.html  trace.html
agentminmax/assets/dashboard/scripts/: app.js  perfetto-embed.js
agentminmax/assets/dashboard/styles/: styles.css
agentminmax/data/: model_sizes.json
docs/: inital-research.md
docs/observability/: Doxyfile  events-metrics.md
plugins/agentminmax-observer/.codex-plugin/: plugin.json
plugins/agentminmax-observer/scripts/: agentminmax-dashboard.sh
plugins/agentminmax-observer/skills/agentminmax-observer/: SKILL.md
scripts/: generate_observability_docs.py
tests/: test_aggregation.py  test_benchmarks.py  test_cli.py  test_config_sources.py  test_dashboard.py  test_ingest.py  test_server.py  test_traces.py
tests/e2e/benchmarks/: README.md  fetch_benchmarks.py  sources.json
tests/fixtures/: benchmark-results.json  codex-native-session.jsonl
tests/perf/: __init__.py  run_perf.py
tests/units/: test_cli.py  test_config_sources.py  test_dashboard.py  test_experiments.py  test_ingest.py  test_observability_docs.py  test_perf.py  test_runs.py  test_server.py
tests/units/fixtures/: codex-native-session.jsonl  codex-session.jsonl
