[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentminmax"
version = "0.1.0"
description = "Complexity-aware observability for long-horizon Codex and agent workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentMinMax contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["agentminmax*"]

[tool.setuptools.package-data]
agentminmax = [
  "assets/dashboard/pages/*",
  "assets/dashboard/scripts/*",
  "assets/dashboard/styles/*",
  "assets/vendor/*",
]
